Cambios menores, y de codificación de los sources

--- a/documentación/algoritmoReto.tex
+++ b/documentación/algoritmoReto.tex
@@ -206,7 +206,9 @@ Los TDA empleados en la resolución del problema de las cifras han sido:\\
     luego la línea 10 se computaría como $\mathcal{O}(1)$. Por simplicidad
     también consideraremos la línea 9 como $\mathcal{O}(1)$, dado que podría
     programarse una lista enlazada dotada del operador \C++{[]} necesario
-    para implementar el algoritmo \ref{Numeros} en \C++{C++}.
+    para implementar el algoritmo \ref{Numeros} en \C++{C++}, o incluso usar
+    un \C++{vector} con el número de posiciones máximas que pueden ocupar las
+    operaciones.
     
     \item [-] Desde las líneas 12 a 17, se trata de operaciones $\mathcal{O}(1)$
     \item [-] De nuevo sobre las líneas 21, 22, 23 puede decirse lo mismo que sobre
