--- a/documentación/algoritmoReto.tex
+++ b/documentación/algoritmoReto.tex
@@ -318,7 +318,7 @@ Los TDA empleados en la resolución del problema de las cifras han sido:\\
    \subsection{Algoritmo alternativo}
    Se propone otro algoritmo destinado a dar una orientación alternativa a la solución del problema. El algoritmo principal se centra
    en buscar una solución siguiendo un sólo camino cada vez, y ahondando en la recursividad antes de volver a buscar por otro camino.
-   Este algoritmo buscar avanzar de forma uniforme por todos los caminos posibles hacia la solución.
+   Este algoritmo buscaría avanzar de forma uniforme por todos los caminos posibles hacia la solución.
    
    Usamos varios grupos de \C++{numeros} y una cola de ellos, llamada \C++{colaGrupos}
    \begin{algorithm}[H]
@@ -363,7 +363,7 @@ Los TDA empleados en la resolución del problema de las cifras han sido:\\
    Con esta implementación hemos querido comprobar el correcto funcionamiento y eficiencia del algoritmo. Para la mayoría
    de los casos, el tiempo requerido no excede los pocos segundos, estando el máximo en torno al medio segundo.\\
    
-   Se aclara que se han usado directivas de preprocesamiento para poder compilar el programa según la opción que se desee:
+   Se han usado directivas de preprocesamiento para poder compilar el programa según la opción que se desee:
    \begin{itemize}
     \item [-] Resolver el problema de las cifras, es decir, para una serie de números dados y un objetivo de 3 dígitos
     (realmente el programa realizado no tiene restricción sobre las cifras o la cantidad de números de partida dados), hallar
